# InWallets-API

./: .gitignore  LICENSE  README.md  alembic.ini  manage.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024-04-03_auth.py  2024-04-05_wallets.py
src/: database.py  main.py  repository.py  unit_of_work.py
src/auth/: dependencies.py  models.py  repository.py  router.py  schemas.py  services.py  tasks.py  utils.py
src/configs/: celery.py  config.py  flower.py
src/wallets/: config.py  dependencies.py  models.py  repository.py  router.py  schemas.py  services.py
